[package]
name = "me-learning-opengl-2"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.8.1"
glam = "0.13.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.26.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[build-dependencies]
cfg_aliases = "0.1.1"
